2009-11-08  Mark Ellis  <mark@mpellis.org.uk>

	* python/pyrapi2.pyx - don't keep the root RegKey objects as
	  permanent attributes of a RAPISession, which results
	  in a circular reference; generate root keys as needed

2009-09-08  Mark Ellis  <mark@mpellis.org.uk>

	* python/pyrapi2.pyx - replace += operator, not available
	  until pyrex 0.9.8

2009-09-01  Guido Diepen  <guido@guidodiepen.nl>
	* Added additional python methods to access/modify the 
	  registry. You can now query all keys/values, rename a 
	  key (i.e. recursive copy and delete original) and 
	  get the data and type for a specific
	  value in a key.

2009-08-08  Mark Ellis  <mark@mpellis.org.uk>

	* IRAPIDevice only exists once for each device, all funcs now
	  get a reference to this device instead of a new instance
	* use new libsynce HRESULT handlers to return the correct types
	  in a few cases
	* implement more auxiliary functions

2009-07-28  Mark Ellis  <mark@mpellis.org.uk>

	* patches from Ilya Bakulin to fix compilation problems

2009-07-26  Mark Ellis  <mark@mpellis.org.uk>

	* split IRAPIStream decls into separate header
	* initial implementation of rapi2 api - functional using
	  synce-hal, but most utility funcs not implemented yet

2009-07-21  Mark Ellis  <mark@mpellis.org.uk>

	* split types out of rapi.h into rapitypes.h, available for
	  rapi2 api

2009-07-19  Mark Ellis  <mark@mpellis.org.uk>

	* change all backend functions to accept a rapi_context as
	  first parameter, instead of using current_context, which
	  is obtained by the calling wrapper functions anyway
	* restructure source tree for rapi2 api; currently the
	  source refers to differences in over-the-wire calls to
	  WM5 and pre-WM5 devices as rapi1 and rapi2, these now
	  become backend_ops_{1,2}
	* keep standard RAPI api and our non-standard wrapper
	  funcs separate

2009-07-16  Mark Ellis  <mark@mpellis.org.uk>

	* 0.14 release

2009-07-12  Mark Ellis  <mark@mpellis.org.uk>
