@@ -1,3 +1,8 @@
+2010-04-05  Guido Diepen <guido@guidodiepen.nl>
+	* python/pyrapi2.pyx - Added method that will not 
+	  only return all subkeys, but a tuple of all subkeys
+	  and the corresponding number of subkeys for each subkey.
+
 2009-11-08  Mark Ellis  <mark@mpellis.org.uk>
 
 	* python/pyrapi2.pyx - don't keep the root RegKey objects as
